# todo_api

./: .env  .env_example  Cargo.toml  readme.md  rustfmt.toml  sqlx-data.json
migrations/: 20220327142842_create_users_table.sql
src/: db.rs  lib.rs  main.rs  server.rs
src/api/auth/: handlers.rs  mod.rs  payloads.rs
src/common/: db.rs  error.rs  error_response.rs  errors.rs  mod.rs  response_payload.rs
src/common/configuration/: app_state.rs  environment.rs  mod.rs
src/configuration/: app_state.rs  environment.rs  lib.rs
src/features/: mod.rs
src/features/auth/: errors.rs  mod.rs  password_hash.rs  random_string.rs
src/features/auth/api_handlers/: login_handler.rs  mod.rs  refresh_token_handler.rs  register_handler.rs
src/features/auth/db/: users.rs
src/features/auth/entity/: user.rs
src/features/auth/jwt/: claims.rs  middleware.rs  mod.rs  token.rs
src/features/jwt_auth/: claims.rs  middleware.rs  mod.rs  token.rs
src/middleware/: JWTAuth.rs  mod.rs
