[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.5", features = [ "runtime-actix-native-tls", "postgres", "macros", "migrate", "chrono", "offline", "uuid" ] }
dotenv = "0.15.0"
envy = "0.4.2"
rand = "0.8.5"
rust-argon2 = "1.0.0"
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
futures-util = "0.3"

[lib]
name = "configuration"
path = "src/configuration/lib.rs"